# qt5-examples

./: README.md
Events/QCloseEvent/: CMakeLists.txt  README.md  core.h  main.qml
Network/HttpClient/Downloader/: CMakeLists.txt  README.md  main.cpp
Network/HttpClient/FileAttachment/: CMakeLists.txt  README.md  main.cpp
Network/HttpClient/FileAttachmentDownloader/: CMakeLists.txt  README.md  downloader.cpp  downloader.h  main.cpp
Network/HttpClient/FileAttachmentDownloaderUI/: CMakeLists.txt  README.md  core.cpp  core.h  downloader.cpp  downloader.h  main.js  main.qml
Network/UDPClient/: CMakeLists.txt  README.md  main.cpp
Qml/Components/ApplicationWindow/: README.md  main.qml
Qml/Components/Dialog/: README.md  main.qml
Qml/Components/Menu/: README.md  main.qml
Qml/Components/Popup/: main.qml
Qml/Components/SystemTrayIcon/: README.md  main.qml
Qml/Components/Window/: main.qml
Qml/QMLTypes/Column/: CMakeLists.txt  README.md  core.h  main.qml
Qml/QMLTypes/MouseArea/: CMakeLists.txt  README.md  main.qml
Qml/QMLTypes/SystemTrayIcon/: core.h  main.qml  qml.qrc
Qml/QtMultimedia/QtMultimedia/: main.qml
RunExecutable/: CMakeLists.txt  main.cpp
System/AutoRun/: CMakeLists.txt  README.md  main.cpp
System/ProcessDetached/: CMakeLists.txt  README.md  main.cpp
System/ProcessSignal/: CMakeLists.txt  README.md  main.cpp  main.py
System/ResourceUsage/: CMakeLists.txt  README.md  main.cpp
System/TimeScheduler/: CMakeLists.txt  README.md  main.cpp
SystemInfo/: CMakeLists.txt  main.cpp
UDPClient/: CMakeLists.txt  main.cpp
(+5 files in other folders)
